--- a/README.Rmd
+++ b/README.Rmd
@@ -256,9 +256,52 @@ dt1 %[]o()% dt2
 # [1] 0 4 4 0 0
 ```
 
-## Shiny example
+### Shiny example 1: regular slider
 
-![](https://github.com/psolymos/intrval/raw/master/extras/shiny.gif)
+
+![](https://github.com/psolymos/intrval/raw/master/extras/regular_slider.gif)
+
+```R
+library(shiny)
+library(intrval)
+library(qcc)
+
+data(pistonrings)
+mu <- mean(pistonrings$diameter[pistonrings$trial])
+SD <- sd(pistonrings$diameter[pistonrings$trial])
+x <- pistonrings$diameter[!pistonrings$trial]
+
+## UI function
+ui <- fluidPage(
+  plotOutput("plot"),
+  sliderInput("x", "x SD:",
+    min=0, max=5, value=0, step=0.1,
+    animate=animationOptions(100)
+  )
+)
+
+# Server logic
+server <- function(input, output) {
+  output$plot <- renderPlot({
+    Main <- paste("Shewhart quality control chart", 
+        "diameter of piston rings", sprintf("+/- %.1f SD", input$x),
+        sep="\n")
+    iv <- mu + input$x * c(-SD, SD)
+    plot(x, pch = 19, col = x %)(% iv +1, type = "b", 
+        ylim = mu + 5 * c(-SD, SD), main = Main)
+    abline(h = mu)
+    abline(h = iv, lty = 2)
+  })
+}
+
+## Run shiny app
+if (interactive()) shinyApp(ui, server)
+```
+
+### Shiny example 2: range slider
+
+
+![](https://github.com/psolymos/intrval/raw/master/extras/range_slider.gif)
 
 ```R
 library(shiny)
@@ -278,15 +321,15 @@ ui <- fluidPage(
     sidebarPanel(
       sliderInput("bb_x", "x value:",
         min=min(x), max=max(x), value=range(x), 
-        step=round(diff(range(x))/20, 1)
+        step=round(diff(range(x))/20, 1), animate=TRUE
       ),
       sliderInput("bb_y", "y value:",
         min = min(y), max = max(y), value = range(y),
-        step=round(diff(range(y))/20, 1)
+        step=round(diff(range(y))/20, 1), animate=TRUE
       ),
       sliderInput("bb_d", "radial distance:",
         min = 0, max = max(d), value = c(0, max(d)/2),
-        step=round(max(d)/20, 1)
+        step=round(max(d)/20, 1), animate=TRUE
       )
     ),
     mainPanel(
